# ductile

./: LICENSE  env.nix  pipe.py  pyproject.toml
ductile/pipe/: __init__.py  internal.py
pipe/: __init__.py
tests/: test_pipe.py
